--- a/F_Android安卓原生项目/app/src/main/res/values/strings.xml
+++ b/F_Android安卓原生项目/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Fndroid</string>
+
+    <string name="open_native">open native page</string>
+    <string name="open_flutter">open flutter page</string>
+    <string name="open_flutter_fragment">open flutter fragment page</string>
+    <string name="native_info">This is a native activity</string>
 </resources>
